Updated background and contacts

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2525,7 +2525,7 @@ input[type="reset"]:hover,
 input[type="button"]:hover,
 button:hover,
 .button:hover {
-  background-color: rgba(144, 144, 144, 0.25);
+  /* background-color: rgba(144, 144, 144, 0.25); */
 }
 
 input[type="submit"]:active,
@@ -3112,7 +3112,10 @@ button:disabled,
 .wrapper.style3 input[type="email"],
 .wrapper.style3 select,
 .wrapper.style3 textarea {
-  background-color: rgba(255, 255, 255, 0.075);
+  /* background-color: rgba(255, 255, 255, 0.075); */
+  border: 1px solid black;
+  background-color: transparent;
+  border-radius: 5px;
 }
 
 .wrapper.style3 select {
@@ -3131,7 +3134,7 @@ button:disabled,
 
 .wrapper.style3 input[type="checkbox"] + label:before,
 .wrapper.style3 input[type="radio"] + label:before {
-  background: rgba(255, 255, 255, 0.075);
+  /* background: rgba(255, 255, 255, 0.075); */
 }
 
 .wrapper.style3 input[type="checkbox"]:checked + label:before,
@@ -3206,7 +3209,7 @@ button:disabled,
 .wrapper.style3 input[type="button"]:hover,
 .wrapper.style3 button:hover,
 .wrapper.style3 .button:hover {
-  background-color: rgba(255, 255, 255, 0.075);
+  /* background-color: rgba(255, 255, 255, 0.075); */
 }
 
 .wrapper.style3 input[type="submit"]:active,
@@ -4115,20 +4118,41 @@ body.is-mobile.landing #footer {
   border: solid 2px white;
 }
 
+@media screen and (max-width: 1680px) {
+}
+
+@media screen and (max-width: 1280px) {
+  .profile_pic {
+    width: 180px;
+    height: 195px;
+    border-radius: 20px;
+    border: solid 2px white;
+  }
+}
+
+@media screen and (max-width: 736px) {
+  .profile_pic {
+    width: 150px;
+    height: 165px;
+    border-radius: 20px;
+    border: solid 2px white;
+  }
+}
+
 .icons li {
   border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: top;
   width: 25%;
-  padding: 0 20px 0 0;
+  padding: 0 40px 0 0;
   flex-wrap: wrap;
   margin: 25px;
   /* border: 2px black solid; */
 }
 
 .icons i {
-  font-size: 100px;
+  font-size: 70px;
   display: flex;
   justify-content: center;
   display: flex;
@@ -4164,8 +4188,12 @@ button {
   background-color: #085bc0;
 }
 button:hover {
-  background-color: greenyellow;
   transform: scale(1.1);
+  background-color: #085bc0;
+}
+button:active {
+  transform: scale(1.1);
+  background-color: #085bc0;
 }
 
 #one {
@@ -4177,5 +4205,19 @@ button:hover {
   letter-spacing: 0.1em;
 }
 #one p {
+  color: black;
+}
+
+.wrapper.style3 {
+  background-color: white;
+}
+
+.wrapper.style3 h2,
+.wrapper.style3 header.major p {
+  color: black;
+}
+
+.wrapper.style3 label {
+  text-align: left;
   color: black;
 }
